--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "santigarcor/laratrust": "5.0.*",
         "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
@@ -39,8 +40,12 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files":  [ 
+            "app/Helpers/FormatUang.php"
         ]
     },
+    
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
